--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
     <title> Contact </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <body style="background-color: rgb(27, 26, 26); color: white;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <body style="background-color: rgb(0, 0, 0); color: white;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">InGames</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -17,21 +17,20 @@
               </div>
             </div>
           </nav>
-        <center style="background-color: rgb(64, 64, 64);">
+        <center style="background-color: rgb(0, 0, 0);">
             <div style="font-family: Arial, Helvetica, sans-serif;"> Like us on Facebook </div>
-            <a href="https://www.facebook.com/InGames7"><img src="/facebookLogo.png" style="width: 5%; height: 7%;"></a>
+            <a href="https://www.facebook.com/InGames7"><img src="/facebookLogo.png" style="width: 5%; height: 6%;"></a>
             <br>
             <div style="font-family: Arial, Helvetica, sans-serif;"> Follow us on Twitter </div>
             <a href="https://twitter.com/InGames7"><img src="/twitterLogo.png" style="width: 5%; height: 7%;"></a>
             <br>
         </center>
         <br>
-        <center style="background-color: rgb(64, 64, 64);;">
+        <center style="background-color: rgb(0, 0, 0);;">
             Email
             <br>
             <a href="mailto:contact@ingames.ml" style="color: white;"> contact@ingames.ml </a>
         </center>
         <br>
-        <img src="/logoInGames.png" style="float: right; width: 50%; height: 25%; margin-left: 25%; margin-right: 25%">
     </body>
 </html>
