--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <a class="nav-item nav-link" href="/contact.html">Contact Us</a>
                 <a class="nav-item nav-link" href="/addgame.html">Apply for Store</a>
                 <a class="nav-item nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-                <a class="nav-item nav-link" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign Up</a>
+                <a class="nav-item nav-link" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup" hidden="">Sign Up</a>
                 </div>
         </div>
     <button id="logout" class="btn btn-primary" style="height: 10%;" href="/logout.html" tabindex="-1" aria-disabled="true" onclick="logout()">Logout
             </button></nav>
 
-       <div style="width: 20%; height: 100%; color:  #444548; float: right;">
+       <div style="width: 20%; height: 200%; color:  #444548; float: right;">
         <br>
 
         <form>
@@ -85,7 +85,14 @@
         <p>&nbsp; FPS</p>
         <br>
         <p>&nbsp; Horror</p>
+    </div><div style="float: left; height:350px ; width: 70%; color: white; background-color: rgb(64, 64, 64); margin-left: 5%; margin-top: 5%;">
+        <div style="margin-top: 15%; color: white; margin-left: 65%">
+            Game Name
+            <br>
+            <small> Descriptor text, other info, developer info </small>
+        </div>
     </div>
+    
     <div style="float: left; height:350px ; width: 15%; color: white; background-color: rgb(64, 64, 64); margin-left: 5%; margin-top: 5%;">
         <center style="margin-top: 135%;">
             Game name
@@ -173,6 +180,7 @@
             window.location.reload();
         }
     </script>
+
 
 
 
