--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
         <hr style="background-color: white; width:60%; float: left;">
         <br>
         <br>
-        <p>&nbsp; Action</p>
-        <br>
-        <p>&nbsp; Adventure</p>
-        <br>
-        <p>&nbsp; Puzzle</p>
-        <br>
-        <p>&nbsp; Racing</p>
-        <br>
-        <p>&nbsp; Shooter</p>
-        <br>
-        <p>&nbsp; RPG</p>
-        <br>
-        <p>&nbsp; Strategy</p>
-        <br>
-        <p>&nbsp; Survival</p>
-        <br>
-        <p>&nbsp; FPS</p>
-        <br>
-        <p>&nbsp; Horror</p>
+        <a>&nbsp; Action</a>
+        <br><br>
+        <a>&nbsp; Adventure<a>
+        <br><br>
+        <a>&nbsp; Puzzle</a>
+        <br><br>
+        <a>&nbsp; Racing</a>
+        <br><br>
+        <a>&nbsp; Shooter</a>
+        <br><br>
+        <a>&nbsp; RPG</a>
+        <br><br>
+        <a>&nbsp; Strategy</a>
+        <br><br>
+        <a>&nbsp; Survival</a>
+        <br><br>
+        <a>&nbsp; FPS</a>
+        <br><br>
+        <a>&nbsp; Horror</a>
     </div><div style="float: left; height:350px ; width: 69%; color: white; background-color: rgb(64, 64, 64); margin-left: 5%; margin-top: 5%;">
         <div style="margin-top: 15%; color: white; margin-left: 65%">
             Game Name
