--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <a class="nav-item nav-link" href="/contact.html">Contact Us</a>
                 <a class="nav-item nav-link" href="/addgame.html">Apply for Store</a>
                 <a class="nav-item nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-                <a class="nav-item nav-link" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup" hidden="">Sign Up / Login</a>
+                <a class="nav-item nav-link" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign Up / Login</a>
                 </div>
         </div>
-    <button id="logout" class="btn btn-primary" style="height: 10%;" href="/logout.html" tabindex="-1" aria-disabled="true" onclick="logout()">Logout
+    <button id="logout" class="btn btn-primary" style="height: 10%;" href="/logout.html" tabindex="-1" aria-disabled="true" onclick="logout()" hidden="">Logout
             </button></nav>
 
        <div style="width: 20%; height: 200%; color:  #444548; float: right;">
@@ -66,25 +66,25 @@
         <hr style="background-color: white; width:60%; float: left;">
         <br>
         <br>
-        <a>&nbsp; Action</a>
-        <br><br>
-        <a>&nbsp; Adventure<a>
-        <br><br>
-        <a>&nbsp; Puzzle</a>
-        <br><br>
-        <a>&nbsp; Racing</a>
-        <br><br>
-        <a>&nbsp; Shooter</a>
-        <br><br>
-        <a>&nbsp; RPG</a>
-        <br><br>
-        <a>&nbsp; Strategy</a>
-        <br><br>
-        <a>&nbsp; Survival</a>
-        <br><br>
-        <a>&nbsp; FPS</a>
-        <br><br>
-        <a>&nbsp; Horror</a>
+        <p>&nbsp; Action</p>
+        <br>
+        <p>&nbsp; Adventure</p>
+        <br>
+        <p>&nbsp; Puzzle</p>
+        <br>
+        <p>&nbsp; Racing</p>
+        <br>
+        <p>&nbsp; Shooter</p>
+        <br>
+        <p>&nbsp; RPG</p>
+        <br>
+        <p>&nbsp; Strategy</p>
+        <br>
+        <p>&nbsp; Survival</p>
+        <br>
+        <p>&nbsp; FPS</p>
+        <br>
+        <p>&nbsp; Horror</p>
     </div><div style="float: left; height:350px ; width: 69%; color: white; background-color: rgb(64, 64, 64); margin-left: 5%; margin-top: 5%;">
         <div style="margin-top: 15%; color: white; margin-left: 65%">
             Game Name
@@ -180,6 +180,7 @@
             window.location.reload();
         }
     </script>
+
 
 
 
