--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/addgame.html">Apply for Store</a>
+                  <a class="nav-item nav-link" href="/profile.html">Profile</a>
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
               </div>
             </div>
