--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/addgame.html">Apply for Store</a>
+                <a class="nav-item nav-link" href="/profile.html">Profile</a>
                 <a class="nav-item nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign Up / Login</a>
                 </div>
