--- a/apply.html
+++ b/apply.html
@@ -6,14 +6,16 @@
     <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body style="background-color: rgb(27, 26, 26);">
-    <div style="margin:auto; margin-top: 20%; background-color: rgb(64, 64, 64);">
-        <center style="margin:auto; width: 60%; background-color: gray; padding: 10px;">
-            Email <input class="form-control" style="width: 20%" id="email" type="text" id="email" required>
-            Username <input class="form-control" style="width: 20%" id="firstname" type="text" id="firstname" required>
-            Password <input class="form-control" style="width: 20%" id="password" type="password" id="password" required>
+<body style="background-color: rgb(0, 0, 0); color: white;">
+    <div style="margin:auto; margin-top: 15%; background-color: rgb(0, 0, 0);">
+        <center style="margin:auto; width: 60%; background-color: rgb(0, 0, 0); padding: 10px;">
+            <h2>InGames</h2>
+            Email <input class="form-control" style="width: 35%" id="email" type="text" id="email" required>
+            Username <input class="form-control" style="width: 35%" id="firstname" type="text" id="firstname" required>
+            Password <input class="form-control" style="width: 35%" id="password" type="password" id="password" required>
             <br>
-            *An InGames account costs 10 cents.
+            <button  style="width: 35%; height: 5%; background-color: rgb(0, 150, 255); border-radius: 10px; border-color: rgb(0, 150, 255); color: white;" onclick="register()">Register</button>
+            <br>
             <br>
             Already have an account? <a href="/login.html">login</a>
         </center>
@@ -66,35 +68,6 @@
             window.location = "https://ingames.ml";
         });
     }
-    </script>
-    
-    <script src="https://www.paypal.com/sdk/js?client-id=AdhanVdPM7AL9Tk1bu1KdjrRf3B9yo1hppZdhc1hexNoRmVchBc_BttWlKSMHyU7mOjvjFSoJshcT0Zl"> // Replace YOUR_SB_CLIENT_ID with your sandbox client ID 
-    </script>
-
-    <center>
-        <div style="width: 15%;" id="paypal-button-container"></div>
-    </center>
-
-    <!-- Add the checkout buttons, set up the order and approve the order -->
-    <script>
-        paypal.Buttons({
-            createOrder: function(data, actions) {
-            return actions.order.create({
-                purchase_units: [{
-                amount: {
-                    value: '0.1',
-                    currency: "USD"
-                }
-                }]
-            });
-            },
-            onApprove: function(data, actions) {
-            return actions.order.capture().then(function(details) {
-                register();
-                alert('Transaction completed by: ' + details.payer.name.given_name);
-            });
-            }
-        }).render('#paypal-button-container'); // Display payment options on your web page
     </script>
 </body>
 </html>
