--- a/login.html
+++ b/login.html
@@ -1,13 +1,17 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-<body style="background-color: rgb(27, 26, 27)">
-    <div style="margin:auto; margin-top: 20%; background-color: rgb(64, 64, 64);">
-        <center style="margin:auto; width: 60%; background-color: gray; padding: 10px;">
-            <h3>Login</h3>
-            Email <input class="form-control" style="width: 20%" id="email" type="text" id="email" required>
-            Password <input class="form-control" style="width: 20%" id="password" type="password" id="password" required>
+<body style="background-color: rgb(0, 0, 0)">
+    <div style="margin:auto; margin-top: 15%;">
+        <center style="margin:auto; width: 60%; padding: 10px; color: white;">
+            <h2>InGames</h2>
+            <h4>Sign in to InGames</h4>
+            Email <input class="form-control" style="width: 35%" id="email" type="text" id="email" required>
+            Password <input class="form-control" style="width: 35%" id="password" type="password" id="password" required>
             <br>
-            <button  class="btn btn-primary" onclick="login()">Login</button>
+            <button  style="width: 35%; height: 5%; background-color: rgb(0, 150, 255); border-radius: 10px; border-color: rgb(0, 150, 255);" onclick="login()">Login</button>
+            <br>
+            <br>
+            Do not have an account? <a href="/apply.html" style="color: rgb(0, 150, 255);">Sign Up</a>
         </center>
     </div>
 
