--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <title>InGames - Games</title> 
     <script>
         if(window.innerWidth < 700){
@@ -41,15 +46,16 @@
 
                 </div>
         </div>
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" style="color: white; background-color: rgb(0, 0, 0); border: rgb(0, 0, 0);" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="dropdown show">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(0, 0, 0); border-color: rgb(0, 0, 0);">
               Profile
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item" onclick="logout()">Logout</a>
-              <a href="/profile.html">View Profile</a>
+              <a class="dropdown-item">Profile</a>
             </div>
-        </div>
+          </div>
     <button class="btn btn-primary" onclick="launcherwin()">Get Launcher</button>
 </nav>
         
