--- a/about.html
+++ b/about.html
@@ -1,21 +1,37 @@
 <html>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> About </title>
-    <body style="background-color: rgb(27, 26, 26); color: rgb(200, 200, 200);">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">InGames</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/addgame.html">Apply for Store</a>
-                  <a class="nav-item nav-link" href="/profile.html">Profile</a>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <body style="background-color: rgb(0, 0, 0); color: rgb(200, 200, 200);">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" style="height: 6%; background-color: rgb(0, 0, 0); color: rgb(0, 0, 0);">
+        <a class="navbar-brand" href="/">InGames</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-              </div>
+                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true" id="signup"> News</a>
+                <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
+                <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup"></a>
+
+                </div>
+        </div>
+        <div class="dropdown show">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(0, 0, 0); border-color: rgb(0, 0, 0);">
+              Profile
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="/index.html">Go to home to view</a>
             </div>
-          </nav>
+          </div>
+    <button class="btn btn-primary" onclick="launcherwin()">Get Launcher</button>
+</nav>
             <h1 style = text-align:center;>About Us</h1>
                 <p style = text-align:center; margin-top: >
                     InGames is a small game studio located in Turkey. 
