--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
         <br>
         <form style=" margin-left: 73%; width: 20%;">
-            <input class="form-control mr-sm-2" type="search" value="Search" style="color: white; margin-top: -3%; color: white; border:rgb(30, 30, 30); float: left; width: 60%; background-color: rgb(30, 30, 30);" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" style="color: white; margin-top: -3%; color: white; border:rgb(30, 30, 30); float: left; width: 60%; background-color: rgb(30, 30, 30);" aria-label="Search">
         </form>
 
         <div style="float: left; height:350px ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
