--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <br>
 
         <p style="color:white;">&nbsp; Categories</p>
-        <hr style="background-color: white; width:60%; float: left;">
+        <hr style="background-color: white; width:60%; margin-right: 40%;">
         <br>
         <br>
         <a href="" style="color: white;">&nbsp; Action</a>
@@ -172,7 +172,7 @@
             <small>Dev Name</small>
         </center>
     </div>
-    <hr style="background-color: rgb(15, 15, 15); margin-top: 100%;">
+    <hr style="background-color: rgb(0, 0, 0); margin-top: 100%;">
     <center style="color: lightgray; margin-left: 33%;">
         InGames 2020
         <br>
