--- a/addgame.html
+++ b/addgame.html
@@ -4,20 +4,32 @@
 </head>
 
 <body style="background-color: rgb(0, 0, 0); color:rgb(200, 200, 200);">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-            <a class="navbar-brand" href="/">InGames</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/addgame.html">Apply for Store</a>
-                 <a class="nav-item nav-link" href="/profile.html">Profile</a>
-                <a class="nav-item nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-              </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" style="height: 6%; background-color: rgb(0, 0, 0); color: rgb(0, 0, 0);">
+        <a class="navbar-brand" href="/">InGames</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
+                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true" id="signup"> News</a>
+                <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
+                <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup"></a>
+
+                </div>
+        </div>
+        <div class="dropdown show">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(0, 0, 0); border-color: rgb(0, 0, 0);">
+              Profile
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="/index.html">Go to home to view</a>
             </div>
-          </nav>
+          </div>
+    <button class="btn btn-primary" onclick="launcherwin()">Get Launcher</button>
+</nav>
     <center font-family: Arial, Helvetica, sans-serif>
         <br>
         Name: <input class="form-control" id="firstname" style="width: 30%;" type="text" name="Firstname " required>
