--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true" id="signup"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
-                <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup"></a>
+                <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up / Sign in</a>
 
                 </div>
         </div>
@@ -59,7 +59,7 @@
     <button class="btn btn-primary" onclick="launcherwin()">Get Launcher</button>
 </nav>  
         <br>
-        <form style=" margin-left: 80%; width: 20%;">
+        <form style=" margin-left: 75%; width: 20%;">
             <input class="form-control" type="search" placeholder="Search" style="color: white; margin-top: -3%; color: white; border:rgb(30, 30, 30); float: left; width: 60%; background-color: rgb(30, 30, 30);" aria-label="Search">
         </form>
 
