--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true" id="signup"> News</a>
+                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
                 <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up / Sign in</a>
 
@@ -171,7 +171,7 @@
             <small>Dev Name</small>
         </center>
     </div>
-    <hr style="background-color: rgb(0, 0, 0); margin-top: 100%;">
+    <hr style="background-color: rgb(0, 0, 0); margin-top: 100%;" hidden="true">
     <center style="color: lightgray; margin-left: 33%;">
         InGames 2020
         <br>
