--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
+                <span id="logout" class="nav-item nav-link active"></span>
                 <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up / Sign in</a>
 
                 </div>
