--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
-                <span id="logout" class="nav-item nav-link active"></span>
                 <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up / Sign in</a>
 
                 </div>
@@ -52,9 +51,8 @@
               Profile
             </a>
           
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <div class="dropdown-menu" id="logout" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item" onclick="logout()">Logout</a>
-              <a class="dropdown-item">Profile</a>
             </div>
           </div>
     <button class="btn btn-primary" onclick="launcher()">Get Launcher</button>
