--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
             <small>Dev Name</small>
         </center>
     </div>
-    <hr style="background-color: rgb(0, 0, 0); margin-top: 100%;" hidden="true">
-    <center style="color: lightgray; margin-left: 33%;">
+    <center style="margin-top: 100%; color: lightgray; margin-left: 33%;">
         InGames 2020
         <br>
         <br>
