--- a/index.html
+++ b/index.html
@@ -132,7 +132,78 @@
             <small>Dev Name</small>
         </center>
     </div>
-    <center style="margin-top: 100%; color: lightgray;;">
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 5%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 9%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+    </div>
+    <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
+        <center style="margin-top: 150%;">
+            Game name
+            <br>
+            <small>Dev Name</small>
+        </center>
+</div>
+    <center style="margin-top: 150%; color: lightgray;;">
         InGames 2020
         <br>
         <br>
