--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         </form>
 
         <div style="float: left; height:350px ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
-            <div style="margin-top: 15%; color: white; margin-left: 65%;">
-                Game Name
+            <img src="https://ingames.ml/absolutewarposter.png" style="width: 55%; height: 100%; float: left;">
+            <div style="margin-top: 12%; color: white; margin-left: 65%; margin-right: 5%;">
+                Absolute War
                 <br>
-                <small> Descriptor text, other info, developer info </small>
+                <small> Will be available for InGames subscribers starting next month.</small>
             </div>
         </div>
 
