--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 5%;">
             <center style="margin-top: 150%;">
-                Game name
+                Haipy
                 <br>
-                <small>Dev Name</small>
+                <small>LightUpGames</small>
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
