--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
 
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 5%;">
+            <img src="https://ingames.ml/haipy.png" style="width: 100%; height: 100%; float: left;">
             <center style="margin-top: 150%;">
                 Haipy
                 <br>
