--- a/addgame.html
+++ b/addgame.html
@@ -17,23 +17,16 @@
           <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
-                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true" id="signup"> News</a>
+                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
-                <a class="nav-item nav-link active" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup"></a>
-
+                <a class="nav-item nav-link active" href="/subscriber.html" id="substore">Subscriber Store</a>
                 </div>
-        </div>
-        <div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(0, 0, 0); border-color: rgb(0, 0, 0);">
-              Profile
-            </a>
-          
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="/index.html">Go to home to view</a>
+
             </div>
-          </div>
-    <button class="btn btn-primary" onclick="launcherwin()">Get Launcher</button>
-</nav>
+
+            <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
+            <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
+</nav>  
     <center font-family: Arial, Helvetica, sans-serif>
         <br>
         Name: <input class="form-control" id="firstname" style="width: 30%;" type="text" name="Firstname " required>
