--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+            <img src="https://ingames.ml/TDSPoster.png" style="width: 100%; height: 100%; float: left;">
             <center style="margin-top: 150%;">
-                Game name
+                The Deadly Sins
                 <br>
-                <small>Dev Name</small>
+                <small>InGames</small>
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
