--- a/about.html
+++ b/about.html
@@ -25,9 +25,15 @@
             <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
 </nav>  
         
-            <h1 style = text-align:center;>About Us</h1>
+            <h1 style = "text-align:center;">About Us</h1>
                 <p style = text-align:center; margin-top: >
-                    Founded in 2019, InGames is a Turkish company founded by Kerimcan and Ömer. InGames is headquartered in Istanbul, Turkey. Today InGames has an ambition of creating a store and a subscription service with third party partners and first party store exclusives. InGames operates InGames store and InGames Subscription Services both of them will be available to users starting next month, with highly affordable prices. InGames provides an end-to-end digital ecosystem for developers to distrubute and operate games.
-                <br>
+                    Founded in 2019, InGames is a Turkish company headquartered in Istanbul, Turkey. Today InGames has an ambition of creating a store and a subscription service with third party partners and first party store exclusives. InGames operates InGames store and InGames Subscription Services both of them will be available to users starting next month, with highly affordable prices. InGames provides an end-to-end digital ecosystem for developers to distrubute and operate games.
+                    <br>
+                </p>
+            <h1 style = "text-align:center;">Contact</h1>
+            Need help with our services?
+            Email: </a href="mailto:contact@ingames.ml">contact@ingames.ml</a>
+            Interested in joining to store?
+            <a href="/addgame.html">Application form</a>
     </body>
 </html>
