--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <br>
             <h1>Contact</h1>
             Need help with our services?
-            Email: </a href="mailto:contact@ingames.ml">contact@ingames.ml</a>
+            Email: <a href="mailto:contact@ingames.ml">contact@ingames.ml</a>
             <br>
             Interested in joining to store?
             <a href="/addgame.html">Application form</a>
