--- a/news.html
+++ b/news.html
@@ -47,8 +47,10 @@
 </nav>  
         <br>
         <div style="float: left; height:400px ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
+    <img src="https://ingames.ml/logoInGames.png" style="float: left; width: 60%; height:100%">
             <div style="margin-top: 15%; color: white; margin-left: 65%;">
-                News
+                
+                InGames Store &amp; Subscription Service will be launched next month!
                 <br>
             </div>
         </div>
@@ -95,4 +97,5 @@
             window.location.reload();
         }
     </script>
+
 </body></html>
