--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@
 </nav>  
         <br>
         <div style="float: left; height:400px ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
-    <img src="https://ingames.ml/logoInGames.png" style="float: left; width: 60%; height:100%">
+    <img src="https://ingames.ml/logoInGamesLauncher.png" style="float: left; width: 60%; height:100%">
             <div style="margin-top: 15%; color: white; margin-left: 65%;">
                 
                 InGames Store &amp; Subscription Service will be launched next month!
