--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <div style="margin-right: 10%; margin-left: 10%; margin-top: 5%">
             <h1>About Us</h1>
             <p>
-                Founded in 2019, InGames is a Turkish company headquartered in Istanbul, Turkey. Today InGames has an ambition of creating a store and a subscription service with third party partners and first party store exclusives. InGames operates InGames store and InGames Subscription Services both of them will be available to users starting next month, with highly affordable prices. InGames provides an end-to-end digital ecosystem for developers to distrubute and operate games.
+                Founded in 2019, InGames is a Turkish company headquartered in Istanbul, Turkey. Today InGames has an ambition of creating a store and a subscription service with third party partners and first party InGames store exclusives. InGames operates InGames store and InGames Subscription Services both of them will be available to users starting next month, with highly affordable prices. InGames provides an end-to-end digital ecosystem for developers to distrubute and operate games.
             </p>
             <br>
             <h1>Contact</h1>
