--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
 
             </div>
 
+            <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
             <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
         </nav>  
         <div style="margin-right: 10%; margin-left: 10%; margin-top: 5%">
