--- a/addgame.html
+++ b/addgame.html
@@ -24,8 +24,9 @@
 
             </div>
 
+            <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
             <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
-</nav>  
+    </nav>  
     <center font-family: Arial, Helvetica, sans-serif>
         <br>
         Name: <input class="form-control" id="firstname" style="width: 30%;" type="text" name="Firstname " required>
