--- a/news.html
+++ b/news.html
@@ -30,11 +30,14 @@
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
+                <a class="nav-item nav-link active" href="/subscriber.html" id="substore">Subscriber Store</a>
                 </div>
 
             </div>
 
-</nav>  
+            <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
+            <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
+    </nav>  
         <br>
         <div style="float: left; height:400px ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
     <img src="https://ingames.ml/logoInGamesLauncher.png" style="float: left; width: 60%; height:100%">
