--- a/addgame.html
+++ b/addgame.html
@@ -87,4 +87,21 @@
         });
     }
     </script>
+    <script>
+        if(localStorage.getItem("username") == null){
+            document.getElementById("logout").hidden = true;
+            document.getElementById("substore").hidden = true;
+            document.getElementById("signup").hidden = false;
+        }else{
+            document.getElementById("logout").hidden = false;
+            document.getElementById("substore").hidden = false;
+            document.getElementById("signup").hidden = true;
+        }
+        
+        function logout(){
+            alert("Logged out!");
+            localStorage.clear();
+            window.location.reload();
+        }
+    </script>
 </body>
