--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <button style="margin-top: 1%; margin-right: 50%; margin-left: 3%; float: left;" class="btn btn-primary">Proceed to payment</button>
+    <button style="margin-top: 1%; margin-right: 50%; margin-left: 3%; float: left;" class="btn btn-primary" onclick="buy()">Proceed to payment</button>
     <script>
         
         document.getElementById("tds").hidden = window.localStorage.getItem("tds") == "false";
