--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,7 @@
         
         function buy(){
             if(window.localStorage.getItem("tds") == "true"){
-                if(window.navigator.platform.charAt(0 == "M"){
+                if(window.navigator.platform.charAt(0) == "M"){
                     window.open("https://github.com/InGamesTDS/TheDeadlySinsRelease/raw/master/MacTDS.zip");
                 }
                 else{
