--- a/cart.html
+++ b/cart.html
@@ -59,14 +59,7 @@
         }
         
         function buy(){
-            if(window.localStorage.getItem("tds") == "true"){
-                if(window.navigator.platform.charAt(0) == "M"){
-                    window.open("https://github.com/InGamesTDS/TheDeadlySinsRelease/raw/master/MacTDS.zip");
-                }
-                else{
-                    window.open("https://github.com/InGamesTDS/TheDeadlySinsRelease/raw/master/WinTDS.zip");
-                }
-            }
+            alert("Downloads are not yet available come back in 2 weeks.");
         }
         
     </script>
