--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
 
         <div style="float: left; height:50% ; width: 75%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 2%;">
-            <img src="https://ingames.ml/absolutewarposter.png" style="width: 55%; height: 100%; float: left;">
+            <img onclick="window.location='/absolutewar.html'" src="https://ingames.ml/absolutewarposter.png" style="width: 55%; height: 100%; float: left;">
             <div style="margin-top: 12%; color: white; margin-left: 65%; margin-right: 5%;font-size: 80%;">
                 Absolute War
                 <br>
