--- a/absolutewar.html
+++ b/absolutewar.html
@@ -10,6 +10,26 @@
     <title>Absolute War</title>
 </head>
 <body style="background-color: black;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" style="height: 6%; background-color: rgb(0, 0, 0); color: rgb(0, 0, 0);">
+        <a class="navbar-brand" href="/">InGames</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
+                <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
+                <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
+                <a class="nav-item nav-link active" href="/subscriber.html" id="substore">Subscriber Store</a>
+                </div>
+
+            </div>
+
+            <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
+            <a class="nav-item nav-link active" style="float: right;" href="/cart.html" tabindex="-1" aria-disabled="true">Cart</a>
+            <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
+    </nav>  
     <div style="background-color: black; margin-left: 10%; margin-right: 10%; margin-top: 5%;">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
