--- a/absolutewar.html
+++ b/absolutewar.html
@@ -68,5 +68,22 @@
       <p>Free</p>
       <button onclick="window.localStorage.setItem('absolutewar', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
   </div>
+   <script>
+       if(localStorage.getItem("username") == null){
+           document.getElementById("logout").hidden = true;
+           document.getElementById("substore").hidden = true;
+           document.getElementById("signup").hidden = false;
+       }else{
+           document.getElementById("logout").hidden = false;
+           document.getElementById("substore").hidden = false;
+           document.getElementById("signup").hidden = true;
+       }
+        
+       function logout(){
+           alert("Logged out!");
+           localStorage.clear();
+           window.location.reload();
+       }
+   </script>
 </body>
 </html>
