--- a/absolutewar.html
+++ b/absolutewar.html
@@ -64,7 +64,7 @@
     <div style="float: left; width: 40%; color: white; margin-top: 50px; margin-left: 10%;">
         Absolute war is a third person open world game developed by InGames. In Absolute War you will find yourself in the middle of the Peleponessan War as an ordinary farmer. You will fight against Athenians and go on an adventure to save your brother.
     </div>
-    <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%;">
+    <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%; margin-bottom: 10%;">
       <p>Free</p>
       <button onclick="window.localStorage.setItem('absolutewar', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
   </div>
