--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
         </div>
         
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 9%;">
+        <img src="https://ingames.ml/dungeononeicon.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
-            Game name
+            Dungeon One
             <br>
-            <small>Dev Name</small>
+            <small>InGames</small>
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
