--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </center>
         </div>
         <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
-            <img src="https://ingames.ml/gameiconriveratt.png" style="width: 100%; height: 100%; float: left;">
+            <img onclick="window.location = 'https://ingames.ml/riverattack.html';" src="https://ingames.ml/gameiconriveratt.png" style="width: 100%; height: 100%; float: left;">
             <center style="margin-top: 150%;">
                 River Attack
                 <br>
