--- a/subscriber.html
+++ b/subscriber.html
@@ -204,6 +204,7 @@
         </center>
 </div>
     <script>
+        var date = new Date();
         if(localStorage.getItem("username") == null){
             document.getElementById("logout").hidden = true;
             document.getElementById("substore").hidden = true;
@@ -212,6 +213,12 @@
             document.getElementById("logout").hidden = false;
             document.getElementById("substore").hidden = false;
             document.getElementById("signup").hidden = true;
+        }
+
+        if(localStorage.getItem("date").substr(0, localStorage.getItem("date").indexOf("\n") + 1) == date.getDate() && parseInt(localStorage.getItem("date").substr(localStorage.getItem("date").indexOf("\n"), localStorage.getItem("date").length))!= date.getMonth()){
+            alert("Your subscription term has came to an end please renew your subscription");
+            localStorage.clear();
+            window.location = "/apply.html";
         }
         
         function logout(){
